--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.6.0",
     "cross-env": "^7.0.3",
     "electron-is-dev": "^1.2.0",
+    "electron-localstorage": "^1.0.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
