--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
   "author": "senpai-10",
   "bin": {
     "epm": "./index.js"
+  },
+  "dependencies": {
+    "cli-color": "^2.0.0",
+    "edit-json-file": "^1.5.0",
+    "input": "^1.0.1"
   }
 }
