--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cli-color": "^2.0.0",
+    "crypto": "^1.0.1",
     "edit-json-file": "^1.5.0",
     "input": "^1.0.1"
   }
