--- a/package.json
+++ b/package.json
@@ -3,18 +3,24 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
-    "scripts": {},
+    "scripts": {
+        "start": "tsc && node dist/index.js"
+    },
     "author": "senpai-10",
     "bin": {
-        "upm": "./index.js"
+        "upm": "./dist/index.js"
     },
     "dependencies": {
+        "@types/node": "^15.3.0",
         "bcrypt": "^5.0.1",
         "cli-color": "^2.0.0",
         "crypto": "^1.0.1",
         "edit-json-file": "^1.5.0",
         "input": "^1.0.1",
         "node-cmd": "^4.0.0",
-        "table": "^6.0.7"
+        "table": "^6.0.7",
+        "ts-node": "^9.1.1",
+        "tslint": "^6.1.3",
+        "typescript": "^4.2.4"
     }
 }
